# circ_log

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
cmake/: absl.cmake  fmt.cmake
inc/: circ_q.hpp  conversion-helpers.hpp  data_type.hpp  mmap_wrapper.hpp  result-helper.hpp  source-location.hpp
